--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "set-proxy",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Make proxies work with sets.",
   "main": "index.js",
   "scripts": {
-    "build": "tsc index.ts --declaration --target 'es6' --module commonjs",
     "test": "tap"
   },
   "keywords": [],
@@ -14,18 +13,7 @@
     "email": "vincent.bailly@microsoft.com"
   },
   "license": "ISC",
-  "peerDependencies": {
-    "@types/node": "*"
-  },
-  "peerDependenciesMeta": {
-    "@types/node": {
-      "optional": true
-    }
-  },
   "devDependencies": {
-    "@types/node": "^17.0.2",
-    "@types/tap": "^15.0.5",
-    "tap": "^15.1.5",
-    "typescript": "^4.5.4"
+    "tap": "^15.1.5"
   }
 }
